# GSDA-Lateralization

./: .gitignore  .pre-commit-config.yaml  ABIDE_AAL.ipynb  Covariate-dependent Machine Learning.ipynb  LICENSE  Model Analysis.ipynb  Plot.ipynb  README.md  SSLR.ipynb  _base.py  default_cfg.py  experiment.py  gsda_demo.ipynb  io_.py  main.py  main_.py  main_abide.py  main_baseline.py  main_core.py  main_fix.py  main_hpc.py  main_permute.py  main_rand_half.py  main_sub_half.py  main_test_sub.py  main_validset.py  main_vol.py  multi_class.py  plot.py  plot_atlas_comparison.ipynb  plot_probabilistic_atlas_extraction.ipynb  plot_signal_extraction.ipynb  proc_data.py  pyproject.toml  requirements.txt  setup.cfg  valid_external.py
PostAnalysis/: README  README.md  dice_score_0.0.mat  dice_score_2.0.mat  dice_score_5.0.mat  hsv_lut_9.mat  io_.py  spec_rate.py
analysis/: Post-Statistics-Demo.ipynb  README.md  plot.ipynb  plot_chord.py  plot_classification_results.py  plot_weight_corr_heatmanp.py  plot_weight_corr_lines.py  process_first_order_weights.py  process_second_order_weights.py  radar-specific.R  run_second_order_cls.py  spec_rate.py
configs/: cr8_cfgs.py  cr8_cfgs_mix_gend.py  cr8_cfgs_mix_group.py  cr8_valid_cfgs.py  default_cfg.py  demo-gsp.yaml  demo-hcp.yaml  gen_valid_cfgs.py
mgstats/: __init__.py
model_analysis/: README.md  first_order_coef_analysis.py  plot.ipynb  plot_classification_results.py  plot_weight_correaltion.py  plt_cls_result.py  second_order_clf.py  second_order_coef_analysis.py
model_stats/: Model Analysis.ipynb  README.md  ToDo.md  (+4 more)
(+214 files in other folders)
