[build-system]

[tool.isort]
known_first_party = [
    "docs",
    "examples",
    "kale",
    "tests",
]
known_third_party = [
    "matplotlib",
    "numpy",
    "setuptools==59.5.0",
    "sphinx_rtd_theme",
    "torch",
]
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"
